try to fix stack overflow